--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.76.1",
+    "framer-motion": "12.23.24",
     "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
