--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.76.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/nodemailer": "^7.0.3",
     "bcryptjs": "^3.0.3",
     "framer-motion": "12.23.24",
     "next": "^15.1.0",
     "next-auth": "^4.24.13",
+    "nodemailer": "^7.0.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
