--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "crons": [
+    {
+      "path": "/api/cron/sync-woodville-stock",
+      "schedule": "0 2 * * *"
+    }
+  ]
 }
 
