--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.12.0",
-    "@types/react": "^19.0.6",
+    "@types/node": "22.19.1",
+    "@types/react": "19.2.6",
     "@types/react-dom": "^19.0.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.3"
+    "typescript": "5.9.3"
   }
 }
