--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.76.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/dompurify": "^3.0.5",
     "@types/nodemailer": "^7.0.3",
+    "@upstash/ratelimit": "^2.0.7",
+    "@upstash/redis": "^1.35.7",
     "bcryptjs": "^3.0.3",
+    "dompurify": "^3.3.0",
     "framer-motion": "12.23.24",
+    "isomorphic-dompurify": "^2.30.0",
     "next": "^15.1.0",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.10",
