--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "@supabase/supabase-js": "^2.76.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/dompurify": "^3.0.5",
@@ -23,7 +25,8 @@
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.10",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@types/node": "22.19.1",
